提交分支代码。

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>microservicecloud-eureka-7002</module>
         <module>microservicecloud-provider-dept-8002</module>
         <module>microservicecloud-provider-dept-8003</module>
+        <module>microservicecloud-consumer-dept-feign</module>
+        <module>microservicecloud-provider-dept-hystrix-8001</module>
     </modules>
 
     <properties>
@@ -49,8 +51,8 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-				<version>8.0.16</version>
-                <!--<version>5.1.46</version>-->
+                <!--<version>8.0.16</version>-->
+                <version>5.1.46</version>
             </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
